--- a/src/index.css
+++ b/src/index.css
@@ -1,119 +1,13 @@
 body {
   margin: 0;
-  margin-top: 2%;
-  margin-bottom: 2%;
-  font-family: -apple-system, BlinkMacSystemFont, "Open Sans", "Helvetica",
-    "Arial", "Lucida", "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
-    "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-  font-weight: 450;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #0c90b2;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
-
-.mainDiv {
-  margin: auto;
-  width: 75%;
-  padding: 10px;
-  background-color: #fbfbfb;
-  border-radius: 8px;
-  text-align: center;
-  overflow: scroll;
-  color: #666;
-}
-
-.logoDiv {
-  margin: auto;
-  margin-bottom: 2%;
-
-  width: 50%;
-}
-
-.logo {
-  width: 100%;
-}
-
-table {
-  font-family: arial, sans-serif;
-  border-collapse: collapse;
-  width: 90%;
-  margin: 2% auto;
-  /* margin-top: ; */
-}
-
-td,
-th {
-  border: 1px solid #dddddd;
-  text-align: left;
-  padding: 8px;
-}
-
-tr:nth-child(even) {
-  background-color: #dddddd63;
-}
-
-ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-li {
-  margin: 10px 0px;
-}
-
-.calculationSelect {
-  width: 75%;
-  margin: auto;
-}
-
-.leftCalculationButton {
-  margin-right: 5%;
-}
-
-.rightCalculationButton {
-  margin-left: 5%;
-}
-
-hr {
-  background-color: #0c90b2;
-  height: 1px;
-  border: 0;
-}
-
-input {
-  margin-left: 1%;
-  border: #0c90b2 solid 1px;
-  border-radius: 4px;
-}
-
-@media only screen and (max-width: 900px) {
-  .rightCalculationButton,
-  .leftCalculationButton {
-    display: inline-block;
-    width: 100%;
-    margin: auto;
-    padding: 1% 0%;
-  }
-
-  .inputGroup {
-    margin: 1% 0%;
-  }
-}
-
-@media only screen and (max-width: 500px) {
-  .mainDiv {
-    width: auto;
-    margin: 0% 0%;
-    padding: 5% 0%;
-    border-radius: 0%;
-  }
-
-  .logoDiv {
-    width: 90%;
-  }
 }
